Fixed vertically stretched site logo

--- a/rsc/css/basic_styles.css
+++ b/rsc/css/basic_styles.css
@@ -66,13 +66,13 @@ abbr {
 pre,
 code {
   -webkit-hyphens: none;
+     -moz-hyphens: none;
       -ms-hyphens: none;
           hyphens: none;
 }
 img {
   border: none;
   max-width: 100%;
-  height: auto;
 }
 .top {
   vertical-align: top;
